Mon Sep  2 23:00:30 CEST 2002 Johnny Mnemonic <johnny@themnemonic.org>

	* Added global variable silc_log_timestamp that tells silclog
	  wether to print or not the timestamp in the logging files.
	  Affected file lib/silcutil/silclog.[ch].

	* Added silcd configuration option Timestamp in the Logging
	  section.  Affected file silcd/serverconfig.[ch],
	  doc/example_silcd.conf.in.

Fri Aug 30 08:57:33 CEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Fixed fingerprint checking to check for entirely empty
	  fingerprint instead of two first bytes when determining
	  if it is set.  Bug #18.  Affected file silcd/command.c.

	* Fixed duplicate PKCS name registering to not allow it.
	  Bugs #17.  Affected file lib/silccrypt/silcpkcs.c.

Sun Aug 25 08:02:04 CEST 2002 Lubomir Sedlacik <salo@silcnet.org>

	* Conditionalize non-gcc compiler optimizations for various
	  platforms, enable those commented out.  Cleanups.
	  Affected file lib/silcmath/mpi/configure.in

Sat Aug 24 15:11:32 EEST 2002 Timo Sirainen <tss@iki.fi>

	* silc_rng_exec_command() left zombie processes if command
	  didn't generate any output.  Affected file
	  lib/silccrypt/silcrng.c

Fri Aug 23 22:05:44 CEST 2002 Lubomir Sedlacik <salo@silcnet.org>

	* Rewrote iconv checking, introduce --with-iconv for systems
	  which rely on libiconv.  Check if iconv() provided by libc
	  is good enough, otherwise demand libiconv.  Affected file
	  configure.in.pre

Fri Aug 23 07:10:52 CEST 2002 Lubomir Sedlacik <salo@silcnet.org>

	* Search for ldopen() also in libc.  This enables SIM support
	  on *BSD systems.  Based on patch from Alex Zepeda.  Affected
	  file configure.in.pre

Sun Aug 18 04:44:30 CEST 2002 Lubomir Sedlacik <salo@silcnet.org>

	* Don't call AM_CONDITIONAL conditonally for SILC_THREADS.
	  This fixes prepare on *BSD systems.  Affected file
	  configure.in.pre

Sun Aug  4 15:55:40 CEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* More fixed for not having purge timeout for global clients