@@ -1,3 +1,10 @@
+Sat Sep  7 15:08:13 EEST 2002 Pekka Riikonen <priikone@silcnet.org>
+
+	* Moved -C option parsing in Irssi SILC client at same time
+	  as other options.  The UI was initialized earlier and caused
+	  problems on command line.  Bug #16.  Affected file is
+	  irssi/src/silc/core/silc-core.c.
+
 Mon Sep  2 23:00:30 CEST 2002 Johnny Mnemonic <johnny@themnemonic.org>
 
 	* Added global variable silc_log_timestamp that tells silclog
